force-app/main/default/objects/leaseworks__Maintenance_Event_Task__c/leaseworks__Maintenance_Event_Task__c.object-meta.xml
<CustomObject>
    <label>Maintenance Event Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Event Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>