force-app/main/default/objects/leaseworks__Maintenance_Event_Task__c/fields/leaseworks__Maintenance_Program_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Program_Event__c</fullName>
    <inlineHelpText>Maintenance Event associated with this task</inlineHelpText>
    <label>Maintenance Program Event</label>
    <referenceTo>leaseworks__Maintenance_Program_Event__c</referenceTo>
    <relationshipLabel>Maintenance Event Tasks</relationshipLabel>
    <relationshipName>Maintenance_Event_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>