force-app/main/default/objects/leaseworks__Maintenance_Event_Task__c/fields/leaseworks__Module__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Module__c</fullName>
    <description>Module to which this ATA belongs to</description>
    <inlineHelpText>Module to which this ATA belongs to</inlineHelpText>
    <label>Module</label>
    <length>50</length>
    <type>Text</type>
</CustomField>