force-app/main/default/objects/leaseworks__Maintenance_Event_Task__c/fields/leaseworks__Y_Hidden_EventCost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_EventCost__c</fullName>
    <formula>if(ISBLANK(leaseworks__Y_Hidden_EngineTemplate__c),leaseworks__Maintenance_Program_Event__r.leaseworks__Event_Cost__c,Null)
/* i.e. manual entry when Engine Template id is null, then take Event cost value for internal calculation */</formula>
    <label>_EventCostForManualEntry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>