force-app/main/default/objects/leaseworks__Maintenance_Event_Task__c/validationRules/leaseworks__PreventUpdationIFMP_Archieved.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PreventUpdationIFMP_Archieved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(leaseworks__Maintenance_Program_Event__r.leaseworks__Maintenance_Program__r.leaseworks__Archive_Maintenance_Program__c=True, OR(NOT(ISNEW()),ISNEW()) )</errorConditionFormula>
    <errorMessage>The related Maintenance Program is Archived. Please Unarchive the Maintenance Program to edit the values</errorMessage>
</ValidationRule>